# system_manager

./: .gitignore  CMakeLists.txt  README.md  icons.qrc  icons_rc.py  interface.ui  main.c  main.cpp  main.py  ui_interface.py
LMM/include/LMM/: LMM.h  lmm_colors.h  lmm_errors.h  lmm_func.h  lmm_functions.h  lmm_graph.h  lmm_matrix.h  lmm_operations.h  lmm_qt.h  lmm_vectors.h
LMM/include/LMM/physics/: lmm_kinematics.h
LMM/include/LMM/visuals/: lmm_plot.h
LMM/src/: lmm_functions.cpp  lmm_graph.cpp  lmm_matrix.cpp  lmm_operations.cpp  lmm_vectors.cpp
LMM/src/physics/: lmm_kinematics.cpp
LMM/src/visuals/: lmm_plot.cpp
app/: main.cpp
examples/: main.cpp
